Fix dark mode for new beta games

--- a/src/css/games/iye.less
+++ b/src/css/games/iye.less
@@ -1,6 +1,10 @@
 #D {
-	.bgaext_overlay {
-		filter: invert(1) grayscale(1) !important;
+	#overall-content:before {
+		content: "";
+		background: #000000A0;
+		position: absolute;
+		width: 100%;
+		height: 100%;
 	}
 
 	.game-help-section>.title,
@@ -38,5 +42,10 @@
 		border-color: var(--light-50);
 		color: var(--light-50);
 		background-color: var(--dark-10);
+	}
+
+	.kam,
+	.token {
+		filter: brightness(0.9);
 	}
 }
